# nostr-playground

./: Cargo.toml  LICENSE  Makefile  base.mk
.devcontainer/: devcontainer.json
client/: Cargo.toml
client/src/: connection.rs  lib.rs
core/: Cargo.toml
core/src/: canonical_event.rs  event.rs  event_id.rs  event_signature.rs  filter.rs  filters.rs  hex_prefix.rs  lib.rs  pubkey.rs  raw_event.rs  relay_information.rs  request.rs  response.rs  seckey.rs  subscription_id.rs  util.rs
core/src/raw_event/: bytes.rs  tag.rs
core/src/serde/: bytes.rs
dev-tools/: Cargo.toml  Makefile
dev-tools/src/: args.rs  main.rs  reset_dynamodb.rs  util.rs
relay/: Cargo.toml  Dockerfile  Makefile
relay/src/: connection.rs  connections.rs  context.rs  copy_from_relay.rs  main.rs  query.rs
relay/src/connection/: handle_request.rs
relay/src/context/: event_broadcaster.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
