[workspace]
members = ["core", "client", "relay", "sandbox"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ecdsa = { version = "0.15", features = ["signing", "verifying"] }
k256 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_test = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
url = "2"
