[workspace]
members = ["core", "client", "relay", "sandbox", "dev-tools"]

[workspace.dependencies]
anyhow = "1"
aws-config = "0.54"
aws-sdk-dynamodb = "0.24"
chrono = { version = "0.4", features = ["serde"] }
ecdsa = { version = "0.15", features = ["signing", "verifying"] }
futures-channel = "0.3"
futures-util = "0.3"
k256 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_test = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
