[package]
name = "nostr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
ecdsa = { workspace = true }
k256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_test = { workspace = true }
