[package]
edition = "2021"
name = "relay"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# local
nostr-core = { path = "../core" }
# 3rd
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
serde_json = { workspace = true }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
