[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# local
nostr-core = { path = "../core" }
# 3rd
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
futures-util = "0.3"
# futures-sink = "0.3"
serde_json = { workspace = true }
